--- a/SCSS/_colores.scss
+++ b/SCSS/_colores.scss
@@ -22,6 +22,10 @@ background-color: $crema;
 }
 }
 
+.barra_progreso--colores{
+    background-color: $bordo;
+}
+
 /* Color de titulos */
 .bienvenida__titulo--color{color: $negro;} 
 
