--- a/SCSS/_boxYFlex.scss
+++ b/SCSS/_boxYFlex.scss
@@ -135,6 +135,11 @@ $estilos2:(
 
 /* Texto de artistas y contenedor */
 .infoArtistas__titulo--boxYFlex{
+    margin: 20px 2px;
+    padding:5px;
+}
+
+.infoArtistas__cardtitulo--boxYFlex{
     margin-bottom: 20px;
     
 }
@@ -142,15 +147,15 @@ $estilos2:(
 .infoArtistas__contenedor--boxYFlex{
     @include espacios(10px, 10px);
     .infoArtista__card--boxYFlex{
-        height: 435px;
+        height: 525px;
         @media only screen and (min-width:401px) and (max-width:960px){
-            height: 340px;
+            height: 420px;
         }
         @media only screen and (min-width:992px) and (max-width:1100px){
-            height: 576px;
+            height: 776px;
         }
         @media only screen and (min-width:1101px) and (max-width:1300px){
-            height: 520px;
+            height: 680px;
         }
     }
 }
@@ -158,7 +163,6 @@ $estilos2:(
 .barra__progreso--boxYFlex{
     margin-top: 10px;
     margin-bottom: 10px;
-    
 }
 
 /* Galeria contenedor y cards*/
