--- a/SCSS/_tipografia.scss
+++ b/SCSS/_tipografia.scss
@@ -61,6 +61,13 @@ $estilos :(
     }
 }
 
+.preguntas__titulo--tipografia{
+    font-size: 35px;
+    letter-spacing: 3px; 
+ 
+}
+
+
 /* Footer texto y logos */
 .footer__texto--tipografia{
     font-family: $fontFamilyRoboto;
