--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,17 +7,20 @@
 /* Color de nav */
 .nav__fondo--color, .infoContacto__botones--color, .errorInformacion__boton--color {
   background-color: #560A04 !important;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 1px 10px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 1px 10px rgba(0, 0, 0, 0.2) !important; }
   .nav__fondo--color .nav__items--color, .infoContacto__botones--color .nav__items--color, .errorInformacion__boton--color .nav__items--color {
     color: rgba(255, 255, 255, 0.76) !important; }
     .nav__fondo--color .nav__items--color:hover, .infoContacto__botones--color .nav__items--color:hover, .errorInformacion__boton--color .nav__items--color:hover {
       color: white !important; }
 
+hr {
+  background-color: #560A04; }
+
 .barra_progreso--colores {
   background-color: #560A04; }
 
 /* Color de titulos */
-.bienvenida__titulo--color, .bienvenida__texto--color, .informacion__titulo--color, .informacion__texto--color, .infoArtistas__titulo--color, .infoArtista__titulo--color, .contenido__titulo--color, .infoContacto__titulo--color, .infoContacto__texto--color, .errorInformacion__parrafo--color {
+.bienvenida__titulo--color, .bienvenida__texto--color, .informacion__titulo--color, .informacion__texto--color, .infoArtistas__titulo--color, .infoArtista__titulo--color, .contenido__titulo--color, .infoContacto__titulo--color, .infoContacto__texto--color, .preguntas__titulo--color, .errorInformacion__parrafo--color {
   color: black; }
 
 /* Color de footer */
@@ -42,6 +45,10 @@
   color: black; }
 
 /* Color card galeria */
+/* Color card preguntas index */
+.preguntas_card--color {
+  background-color: #fff6e1; }
+
 /* Color de card resaltada */
 .card__contenedor--colorEspecial {
   background-color: #560A04 !important;
@@ -124,6 +131,10 @@ h5 {
       text-align: center;
       font-size: 21px;
       line-height: 29px; } }
+
+.preguntas__titulo--tipografia {
+  font-size: 35px;
+  letter-spacing: 3px; }
 
 /* Footer texto y logos */
 .footer__texto--tipografia {
@@ -241,17 +252,20 @@ h5 {
 /* Color de nav */
 .nav__fondo--color, .infoContacto__botones--color, .errorInformacion__boton--color {
   background-color: #560A04 !important;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 1px 10px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 1px 10px rgba(0, 0, 0, 0.2) !important; }
   .nav__fondo--color .nav__items--color, .infoContacto__botones--color .nav__items--color, .errorInformacion__boton--color .nav__items--color {
     color: rgba(255, 255, 255, 0.76) !important; }
     .nav__fondo--color .nav__items--color:hover, .infoContacto__botones--color .nav__items--color:hover, .errorInformacion__boton--color .nav__items--color:hover {
       color: white !important; }
 
+hr {
+  background-color: #560A04; }
+
 .barra_progreso--colores {
   background-color: #560A04; }
 
 /* Color de titulos */
-.bienvenida__titulo--color, .bienvenida__texto--color, .informacion__titulo--color, .informacion__texto--color, .infoArtistas__titulo--color, .infoArtista__titulo--color, .contenido__titulo--color, .infoContacto__titulo--color, .infoContacto__texto--color, .errorInformacion__parrafo--color {
+.bienvenida__titulo--color, .bienvenida__texto--color, .informacion__titulo--color, .informacion__texto--color, .infoArtistas__titulo--color, .infoArtista__titulo--color, .contenido__titulo--color, .infoContacto__titulo--color, .infoContacto__texto--color, .preguntas__titulo--color, .errorInformacion__parrafo--color {
   color: black; }
 
 /* Color de footer */
@@ -276,6 +290,10 @@ h5 {
   color: black; }
 
 /* Color card galeria */
+/* Color card preguntas index */
+.preguntas_card--color {
+  background-color: #fff6e1; }
+
 /* Color de card resaltada */
 .card__contenedor--colorEspecial {
   background-color: #560A04 !important;
@@ -325,12 +343,12 @@ body::-webkit-scrollbar-thumb {
 /* map-get */
 /* Texto del index */
 .bienvenida__contenedor--boxYFlex {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 70px;
+  padding-bottom: 70px;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px; }
+  margin-top: 30px;
+  margin-bottom: 30px; }
   @media only screen and (min-width: 0px) and (max-width: 400px) {
     .bienvenida__contenedor--boxYFlex {
       display: flex;
@@ -357,6 +375,13 @@ body::-webkit-scrollbar-thumb {
         padding: 4px;
         width: auto; } }
 
+.preguntas__contendor--boxYFlex {
+  padding-top: 15px;
+  margin-top: 40px;
+  margin-bottom: 35px;
+  display: flex;
+  justify-content: center; }
+
 .bienvenida__texto--boxYFlex {
   margin: 11px;
   padding: 5px;
@@ -371,6 +396,16 @@ body::-webkit-scrollbar-thumb {
       margin: 5px;
       padding: 5px;
       width: auto; } }
+
+hr {
+  width: 900px;
+  height: 3px; }
+
+.preguntas_card--boxYFlex {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 30px; }
 
 /* Footer texto y logos */
 .footer__texto--boxYFlex {
@@ -534,7 +569,7 @@ body::-webkit-scrollbar-thumb {
 /* Variable de efectos */
 /* Efecto en logo nav */
 .nav__logo--efectos:hover {
-  transform: scale(1.04); }
+  transform: scale(1.02); }
 
 .nav__logo--efectosIndex {
   animation-duration: 2s;
@@ -546,8 +581,13 @@ body::-webkit-scrollbar-thumb {
   100% {
     opacity: 1; } }
 
+/* Efecto preguntas index */
+.preguntas_card--efectos:hover {
+  transform: scale(1.02);
+  transition: 0.4s; }
+
 /* Efecto en items de la nav */
 .nav__items--efecto:hover, .footer__logos--efectos:hover {
-  transform: scale(1.04); }
+  transform: scale(1.02); }
 
 /* Efectos en logos del footer */
