--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Variables de color */
 /* Color de fondo */
 .body__fondo--color {
@@ -134,7 +133,8 @@ h5 {
 
 .preguntas__titulo--tipografia {
   font-size: 35px;
-  letter-spacing: 3px; }
+  letter-spacing: 3px;
+  text-align: center; }
 
 /* Footer texto y logos */
 .footer__texto--tipografia {
@@ -189,11 +189,6 @@ h5 {
   font-size: 18px;
   margin-bottom: 20px;
   margin-top: 20px; }
-
-.tamaño {
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700; }
 
 .barra__titulo--tipografia {
   font-family: "Roboto", sans-serif;
@@ -400,6 +395,12 @@ body::-webkit-scrollbar-thumb {
 hr {
   width: 900px;
   height: 3px; }
+  @media only screen and (min-width: 0px) and (max-width: 400px) {
+    hr {
+      width: 200px; } }
+  @media only screen and (min-width: 401px) and (max-width: 960px) {
+    hr {
+      width: 350px; } }
 
 .preguntas_card--boxYFlex {
   margin-top: 10px;
