--- a/SCSS/_boxYFlex.scss
+++ b/SCSS/_boxYFlex.scss
@@ -85,6 +85,12 @@ $estilos2:(
  hr{
      width: 900px;
      height: 3px;
+     @media only screen and (min-width:0px) and (max-width:400px){
+         width: 200px;
+     }
+     @media only screen and (min-width:401px) and (max-width:960px){
+         width: 350px;
+     }
      
  }
 .preguntas_card--boxYFlex{
