--- a/SCSS/_boxYFlex.scss
+++ b/SCSS/_boxYFlex.scss
@@ -141,6 +141,11 @@ $estilos2:(
     padding-left: 20px;
     padding-right: 20px;
     width: 95%;
+    @media only screen and (min-width:0px) and (max-width:960px){
+        width: 100%;
+        padding-right: 0px;
+
+    }
     .informacion__titulo--boxYFlex{
         margin: 20px 2px;
         padding:5px;
@@ -148,12 +153,27 @@ $estilos2:(
     .informacion__imagen--boxYFlex{
         padding-bottom: 20px;
         margin-right: 50px;
+        @media only screen and (min-width:0px) and (max-width:730px){
+            margin-right: 0px;
+            margin-left:5px;
+           
+        }
+        @media only screen and (min-width:730px) and (max-width:962px){
+            margin-left: 60px;
+            padding-left: 40px;
+           
+        }
 
     }
     .informacion__texto--boxYFlex{
         padding-right:10px;
         padding-left: 25px;
         padding-top: 10px;
+        @media only screen and (min-width:0px) and (max-width:960px){
+            padding: 5px;
+           
+        }
+
        
     }
 }
