--- a/SCSS/_colores.scss
+++ b/SCSS/_colores.scss
@@ -62,6 +62,14 @@ hr{
     }
 }
 
+.navbar-light .navbar-toggler  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.85)' stroke-width='2.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-light .navbar-toggler {
+    border: solid #ffffff 2px;
+    
+}
 /* Color de logos */
 .footer__logos--color{opacity: 80%;
 
