--- a/SCSS/_colores.scss
+++ b/SCSS/_colores.scss
@@ -48,7 +48,7 @@ hr{
 
 .infoArtista__titulo--color {@extend .bienvenida__titulo--color;}
 
-.contenido__titulo--color{@extend .bienvenida__titulo--color;}
+.galeria__titulo--color{@extend .bienvenida__titulo--color;}
 
 .infoContacto__titulo--color{color: $blanco2;}
 
